ui improvement in progress

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Participation Leaders Map</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-        <link rel="stylesheet" href="assets/normalize-css/normalize.css" />
+        <link rel="stylesheet" href="assets/bootstrap.feedthefox.min.css" />
         <script src="assets/fetch/promise.min.js"></script>
         <script src="assets/fetch/fetch.js"></script>
         <link rel="stylesheet" href="assets/leaflet/leaflet.css" />
