--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="assets/bootstrap.feedthefox.min.css" />
+        <link rel="stylesheet" href="//code.cdn.mozilla.net/fonts/fira.css">
         <script src="assets/fetch/promise.min.js"></script>
         <script src="assets/fetch/fetch.js"></script>
         <link rel="stylesheet" href="assets/leaflet/leaflet.css" />
@@ -11,8 +12,19 @@
         <script src="assets/js/sorttable.js"></script>
         <script src="assets/js/md5.js"></script>
         <style>
+            * { font-family: "Fira Sans",sans-serif !important; }
             body { margin-left:20px; margin-right:20px; }
-            #map { height: 80%; }
+            .header {
+                background-color: #0C99D5;
+                background-image: linear-gradient(to bottom, rgba(12, 153, 213, 0) 0px, rgba(12, 153, 213, 0) 100px, #0C99D5 550px, #0C99D5), repeating-linear-gradient(118deg, rgba(12, 153, 213, 0) 0px, #00A7E0 550px, rgba(12, 153, 213, 0) 550px, #00A7E0 800px, rgba(12, 153, 213, 0) 800px, #00A7E0 950px);
+                margin-left: -20px;
+                margin-right: -20px;
+                padding-right: 15px;
+                padding-left: 15px;
+                color:white;
+            }
+            .header h1 {margin-top:0;}
+            #map { height: 60%; padding-bottom:10px; }
             #list { margin-top:10px; width:100% }
             table.sortable thead {
                 background-color:#eee;
@@ -22,18 +34,29 @@
         </style>
     </head>
     <body>
-        <div id="map"></div>
-        <table id="list" class="sortable">
-            <thead>
-                <tr>
-                    <td>Name</td>
-                    <td>Country</td>
-                </tr>
-            </thead>
-            <tbody>
-                
-            </tbody>
-        </table>
-        <script src="assets/js/app.js"></script>
-    </body>
+        <div class="header">
+            <h1>Participation Leaders Map</h1>
+            <h3>Found your nearly leaders on the map or filter the list in the bottom</h3>
+            <div id="map"></div>
+            <br>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <table id="list" class="sortable table col-lg-12">
+                    <thead>
+                        <tr>
+                            <td>Name <small>(click me)</small></td>
+                            <td>Country <small>(click me)</small></td>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <script src="assets/js/app.js"></script>
+</body>
 </html>
