--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             .header {
                 background-color: #0C99D5;
                 background-image: linear-gradient(to bottom, rgba(12, 153, 213, 0) 0px, rgba(12, 153, 213, 0) 100px, #0C99D5 550px, #0C99D5), repeating-linear-gradient(118deg, rgba(12, 153, 213, 0) 0px, #00A7E0 550px, rgba(12, 153, 213, 0) 550px, #00A7E0 800px, rgba(12, 153, 213, 0) 800px, #00A7E0 950px);
+                color:white;
                 margin-left: -20px;
                 margin-right: -20px;
+                padding-top:10px;
                 padding-right: 15px;
                 padding-left: 15px;
-                color:white;
             }
             .header h1 {margin-top:0;}
             #map { height: 60%; padding-bottom:10px; }
@@ -30,6 +31,14 @@
                 background-color:#eee;
                 font-weight: bold;
                 cursor: pointer;
+            }
+            footer {
+                background-color: #57585D;
+                color: #FFF;
+                height: 140px;
+                padding: 40px 0px;
+                width: 100%;
+                font-size: 0.9em;
             }
         </style>
     </head>
@@ -56,7 +65,27 @@
                 </table>
             </div>
         </div>
-    </div>
-    <script src="assets/js/app.js"></script>
-</body>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <a href="https://www.mozilla.org"><img class="footer-logo" src="//d1jou7z3786ary.cloudfront.net/static/img/footer-mozilla.d2f5c608cf32.png" alt="mozilla"></a>
+                        <p class="license">
+                            Portions of this content are ©1998–2015 by individual mozilla.org contributors.<br> Content available under a
+                            <a href="https://www.mozilla.org/en-US/foundation/licensing/website-content/">Creative Commons license</a>.
+                        </p>
+                    </div>
+
+                    <div class="footer-license col-md-6">
+                        <div>This is a <a href="https://wiki.mozilla.org/Participation">Participation Team</a> experiment.</div>
+                        <br>
+                        <p>
+                            <a href="https://github.com/Mte90/Participation-Lead-Map">Contribute to this map</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <script src="assets/js/app.js"></script>
+    </body>
 </html>
