Fixed the Header line grammer.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <body>
         <div class="header">
             <h1>Participation Leaders Map</h1>
-            <h3>Found your nearly leaders on the map or filter the list in the bottom</h3>
+            <h3>Find your nearest participation leader on the map or filter from the list in the bottom</h3>
             <div id="map"></div>
             <br>
         </div>
