--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </head>
     <body>
         <div class="header">
-            <h1>Participation Leaders Map</h1>
+            <h1><span class="counter"></span>Participation Leaders Map</h1>
             <h3>Find your nearest participation leader on the map or filter from the list in the bottom</h3>
             <div id="map"></div>
             <br>
