--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
                 padding-left: 15px;
             }
             .header h1 {margin-top:0;}
+			h1 a {
+				color: #DAE6FF;
+				font-size: 20px;
+			}
+			.header h1, .header h3, #map {
+				width: 80%;
+				margin: 0 auto;
+			}
+			.header h3 {
+				margin-bottom:5px;
+			}
             #map { height: 60%; padding-bottom:10px; }
             #list { margin-top:10px; width:100% }
             table.sortable thead {
@@ -44,7 +55,7 @@
     </head>
     <body>
         <div class="header">
-            <h1><span class="counter"></span>Participation Leaders Map</h1>
+            <h1><span class="counter"></span>Participation Leaders Map - <a href="https://github.com/Mte90/Participation-Lead-Map">Add yourself!</a></h1>
             <h3>Find your nearest participation leader on the map or filter from the list in the bottom</h3>
             <div id="map"></div>
             <br>
