--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Participation Leaders Map</title>
+        <title>Tech Speakers Map</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="assets/bootstrap.feedthefox.min.css" />
@@ -55,8 +55,8 @@
     </head>
     <body>
         <div class="header">
-            <h1><span class="counter"></span>Participation Leaders Map - <a href="https://github.com/Mte90/Participation-Lead-Map">Add yourself!</a></h1>
-            <h3>Find your nearest participation leader on the map or filter from the list in the bottom</h3>
+            <h1><span class="counter"></span>Tech Speakerss Map - <a href="https://github.com/Mte90/Tech-Speakers-Map">Add yourself!</a></h1>
+            <h3>Find your nearest Tech Speakers on the map or filter from the list in the bottom</h3>
             <div id="map"></div>
             <br>
         </div>
@@ -82,16 +82,16 @@
                     <div class="col-md-6">
                         <a href="https://www.mozilla.org"><img class="footer-logo" src="//d1jou7z3786ary.cloudfront.net/static/img/footer-mozilla.d2f5c608cf32.png" alt="mozilla"></a>
                         <p class="license">
-                            Portions of this content are ©1998–2015 by individual mozilla.org contributors.<br> Content available under a
+                            Portions of this content are ©1998–2017 by individual mozilla.org contributors.<br> Content available under a
                             <a href="https://www.mozilla.org/en-US/foundation/licensing/website-content/">Creative Commons license</a>.
                         </p>
                     </div>
 
                     <div class="footer-license col-md-6">
-                        <div>This is a <a href="https://wiki.mozilla.org/Participation">Participation Team</a> experiment.</div>
+                        <div>This is a Tech Speakers little project with #mozlove for the tech world.</div>
                         <br>
                         <p>
-                            <a href="https://github.com/Mte90/Participation-Lead-Map">Contribute to this map</a>
+                            <a href="https://github.com/Mte90/Tech-Speakers-Map">Contribute to this map</a>
                         </p>
                     </div>
                 </div>
