--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </head>
     <body>
         <div class="header">
-            <h1><span class="counter"></span>Tech Speakerss Map - <a href="https://github.com/Mte90/Tech-Speakers-Map">Add yourself!</a></h1>
+            <h1><span class="counter"></span>Tech Speakers Map - <a href="https://github.com/Mte90/Tech-Speakers-Map">Add yourself!</a></h1>
             <h3>Find your nearest Tech Speakers on the map or filter from the list in the bottom</h3>
             <div id="map"></div>
             <br>
