--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 width: 100%;
                 font-size: 0.9em;
             }
+	    .footer-logo {
+		 width: 60px;
+	    }
         </style>
     </head>
     <body>
@@ -79,7 +82,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <a href="https://www.mozilla.org"><img class="footer-logo" src="//d1jou7z3786ary.cloudfront.net/static/img/footer-mozilla.d2f5c608cf32.png" alt="mozilla"></a>
+                        <a href="https://www.mozilla.org"><img class="footer-logo" src="https://www.mozilla.org/media/img/pebbles/moz-wordmark-light-reverse.cb1bdf6d1de6.svg" alt="mozilla"></a>
                         <p class="license">
                             Portions of this content are ©1998–2017 by individual mozilla.org contributors.<br> Content available under a
                             <a href="https://www.mozilla.org/en-US/foundation/licensing/website-content/">Creative Commons license</a>.
