--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="assets/bootstrap.feedthefox.min.css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
         <link rel="stylesheet" href="//code.cdn.mozilla.net/fonts/fira.css">
         <script src="assets/fetch/promise.min.js"></script>
         <script src="assets/fetch/fetch.js"></script>
@@ -11,49 +12,6 @@
         <script src="assets/leaflet/leaflet.js"></script>
         <script src="assets/js/sorttable.js"></script>
         <script src="assets/js/md5.js"></script>
-        <style>
-            * { font-family: "Fira Sans",sans-serif !important; }
-            .header {
-                background-color: #0C99D5;
-                background-image: linear-gradient(to bottom, rgba(12, 153, 213, 0) 0px, rgba(12, 153, 213, 0) 100px, #0C99D5 550px, #0C99D5), repeating-linear-gradient(118deg, rgba(12, 153, 213, 0) 0px, #00A7E0 550px, rgba(12, 153, 213, 0) 550px, #00A7E0 800px, rgba(12, 153, 213, 0) 800px, #00A7E0 950px);
-                color:white;
-                margin-left: -20px;
-                margin-right: -20px;
-                padding-top:10px;
-                padding-right: 15px;
-                padding-left: 15px;
-            }
-            .header h1 {margin-top:0;}
-			h1 a {
-				color: #DAE6FF;
-				font-size: 20px;
-			}
-			.header h1, .header h3, #map {
-				width: 80%;
-				margin: 0 auto;
-			}
-			.header h3 {
-				margin-bottom:5px;
-			}
-            #map { height: 60%; padding-bottom:10px; }
-            #list { margin-top:10px; width:100% }
-            table.sortable thead {
-                background-color:#eee;
-                font-weight: bold;
-                cursor: pointer;
-            }
-            footer {
-                background-color: #57585D;
-                color: #FFF;
-                height: 140px;
-                padding: 40px 0px;
-                width: 100%;
-                font-size: 0.9em;
-            }
-	    .footer-logo {
-		 width: 60px;
-	    }
-        </style>
     </head>
     <body>
         <div class="header">
